# protochess

./: .gitignore  README.md
protochess-engine-rs/: Cargo.toml  README.md
protochess-engine-rs/src/: lib.rs  main.rs  rankfile.rs
protochess-engine-rs/src/constants/: fen.rs  mod.rs  piece_scores.rs
protochess-engine-rs/src/evaluator/: material_score.rs  mod.rs  positional_score.rs
protochess-engine-rs/src/move_generator/: attack_tables.rs  bitboard_moves.rs  mod.rs
protochess-engine-rs/src/move_generator/attack_tables/: mask_handler.rs  mod.rs
protochess-engine-rs/src/piece/: material_score.rs  mod.rs  movement.rs  movement_pattern.rs  piece_definition.rs  piece_factory.rs  positional_score.rs  precomputed_piece_def.rs
protochess-engine-rs/src/piece/evaluator/: material_score.rs  mod.rs  positional_score.rs
protochess-engine-rs/src/position/: castle_rights.rs  castled_players.rs  fen.rs  game_state.rs  global_rules.rs  make_move.rs  mod.rs  movement_pattern.rs  parse_fen.rs  piece.rs  piece_set.rs  position_properties.rs  zobrist_table.rs
protochess-engine-rs/src/position/create/: fen.rs  game_state.rs  mod.rs  position_factory.rs  variant_factory.rs
protochess-engine-rs/src/searcher/: alphabeta.rs  eval.rs  lazy_smp.rs  mod.rs  search_result.rs  timeout_error.rs
protochess-engine-rs/src/searcher/transposition_table/: entry.rs  mod.rs  (+2 more)
protochess-engine-rs/src/thread_handler/: mod.rs  wasm_thread.rs
protochess-engine-rs/src/transposition_table/: entry.rs  mod.rs
protochess-engine-rs/src/types/: bitboard.rs  chess_move.rs  mod.rs  piece_type.rs  searcher.rs
protochess-engine-rs/src/utils/: board.rs  coord_index.rs  custom_position.rs  debug.rs  mod.rs  notation.rs  perft.rs  rankfile.rs
protochess-engine-rs/tests/: custom_pieces.rs  evaluator.rs  fen.rs  move_generator.rs  perft.rs  position.rs  principal_variation.rs  transposition_entry.rs  zobrist.rs
(+22 files in other folders)
