[package]
name = "protochess-engine-rs"
description = "A chess engine with user-defined piece movement rules, written in Rust"
repository = "https://github.com/p-rivero/protochess"
version = "1.0.0"
authors = ["raytr <ray.tran120@gmail.com>", "p-rivero"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[profile.dev-opt0]
inherits = "dev"
opt-level = 0
debug = true

[profile.test]
opt-level = 3

[features]
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
instant = { version = "0.1", features = [ "now", "wasm-bindgen" ] }
scan-rules = "0.2.0"
rand = "0.7.3"
arrayvec = "0.5.1"
numext-fixed-uint = "0.1.4"
ahash = "0.3.5"
lazy_static = "1.4.0"
impl_ops = "0.1.1"
